[package]
name = "rocksdb-raft"
version = "0.1.0"
readme = "README.md"

edition = "2021"
authors = [
    "Josh Casale <joshua.d.casale@gmail.com>",
    "drdr xp <drdr.xp@gmail.com>",
    "Pedro Paulo de Amorim <pepa.amorim@gmail.com>",
    "The Tremor Team",
]

[[bin]]
name = "raft-key-value-rocks"
path = "src/bin/main.rs"

[dependencies]
openraft = { version = "0.9.13", features = ["serde", "storage-v2"] }

tokio = { version = "1.35.1", features = ["full"] }
byteorder = "1.4.3"
clap = { version = "4.1.11", features = ["derive", "env"] }
reqwest = { version = "0.11.9", features = ["json"] }
rocksdb = "0.22.0"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
tide = { version = "0.16" }
maplit = "1.0.2"
# for toy-rpc, use `serde_json` instead of the default `serde_bincode`:
# bincode which enabled by default by toy-rpc, does not support `#[serde(flatten)]`: https://docs.rs/bincode/2.0.0-alpha.1/bincode/serde/index.html#known-issues
toy-rpc = { version = "0.8.6", features = [
    "ws_tokio",
    "server",
    "client",
    "tokio_runtime",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
async-trait = "0.1.81"

[dev-dependencies]
maplit = "1.0.2"
tempfile = { version = "3.4.0" }


[features]

[package.metadata.docs.rs]
all-features = true