[package]
name = "rocksdb-raft"
version = "0.1.0"
readme = "README.md"

edition = "2021"
authors = [
    "Josh Casale <joshua.d.casale@gmail.com>",
    "drdr xp <drdr.xp@gmail.com>",
    "Pedro Paulo de Amorim <pepa.amorim@gmail.com>",
    "The Tremor Team",
]

[dependencies]
openraft = { version = "0.9.13", features = ["serde", "storage-v2"] }

tokio = { version = "1.35.1", features = ["full"] }
byteorder = "1.4.3"
reqwest = { version = "0.11.9", features = ["json"] }
rocksdb = "0.22.0"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
tide = { version = "0.16" }
# for toy-rpc, use `serde_json` instead of the default `serde_bincode`:
# bincode which enabled by default by toy-rpc, does not support `#[serde(flatten)]`: https://docs.rs/bincode/2.0.0-alpha.1/bincode/serde/index.html#known-issues
toy-rpc = { version = "0.8.6", features = [
    "ws_tokio",
    "server",
    "client",
    "tokio_runtime",
] }
tracing = "0.1.40"
async-trait = "0.1.81"
sha2 = "0.9.9"
aws-config = "1.6.1"
aws-sdk-s3 = "1.82.0"
uuid = { version = "1.16.0", features = ["v4"] }

[dev-dependencies]
tempfile = { version = "3.4.0" }
testcontainers = "0.23.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]

[package.metadata.docs.rs]
all-features = true