[package]
name = "url-shortener-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
moka = {  version = '0.12.8', features = ['sync'] }
quick_cache = "0.6.2"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
thiserror = "1.0.63"
log = "0.4.22"
url = "2.2"
rocksdb-raft  = {path = "../rocksdb-raft"}
tokio = "1.39.2"
openraft = { version = "0.9.13", features = ["serde", "storage-v2"] }
rocksdb = "0.22.0"
async-trait = "0.1.81"
clap = { version = "4.5.14", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.18"
reqwest = "0.11.27"
#nohash-hasher = "0.2.0"
validator = { version = "0.17", features = ["derive"] }
dashmap = "5.5.3"

[dev-dependencies]
criterion = "0.5.1"
awc = "3.5.0"


[[bench]]
name = "bench_web_server"
harness = false
