[package]
name = "url-shortener-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
quick_cache = "0.6.2"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
thiserror = "1.0.63"
rocksdb-raft  = {path = "../rocksdb-raft"}
openraft = { version = "0.9.13", features = ["serde", "storage-v2"] }
rocksdb = "0.22.0"
clap = { version = "4.5.14", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.18"
reqwest = "0.11.27"
validator = { version = "0.17", features = ["derive"] }
# CVE pins
tungstenite = "0.20.1"
crossbeam-channel = "0.5.15"
openssl = "0.10.72"
idna = "1.0.0"

[dev-dependencies]
criterion = "0.5.1"


[[bench]]
name = "bench_web_server"
harness = false
